influxdb3-plugin-schemas/tests/snapshots/parse_fixtures__invalid_manifest_manifest_exclude_not_array.toml.snap
---
source: influxdb3-plugin-schemas/tests/parse_fixtures.rs
expression: errors.to_string()
---
TOML parse error: TOML parse error at line 8, column 11
  |
8 | exclude = "tests"
  |           ^^^^^^^
invalid type: string "tests", expected a sequence
